--- a/src/app/heroes.component.html
+++ b/src/app/heroes.component.html
@@ -1,10 +1,17 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
-  <li *ngFor="let hero of heroes"
-    [class.selected]="hero === selectedHero"
-    (click)="onSelect(hero)">
-    <span class="badge">{{hero.id}}</span> {{hero.name}}
+ <li *ngFor="let hero of heroes"
+    (@flyInOut.start)="animationStarted($event)"
+    (@flyInOut.done)="animationDone($event)"
+    [@flyInOut]="'in'">
+  <!--<li *ngFor="let hero of heroes"-->
+    <!--[class.selected]="hero === selectedHero"-->
+    <!--(click)="onSelect(hero)">-->
+    <!--<span class="badge">{{hero.id}}</span> {{hero.name}}-->
+  <!--</li>-->
+  {{hero.name}}
   </li>
+  <!--<button (click)="selectHero()">Random Select</button>-->
 </ul>
 <div *ngIf="selectedHero">
   <h2>
